# bevy_tavern_game

./: Cargo.toml  notes.txt
src/: main.rs
src/actors/: mod.rs
src/actors/customer/: bundle.rs  mod.rs  plugin.rs
src/actors/player/: mod.rs  player_bundle.rs  player_plugin.rs
src/actors/player/systems/: close_menus.rs  input.rs  listeners.rs  mod.rs  player_handle_ui_input.rs  player_movement.rs  stove_interaction.rs
src/cameras/: mod.rs
src/cameras/main_camera/: main_camera_bundle.rs  mod.rs  plugin.rs
src/cameras/main_camera/systems/: mod.rs  player_follow.rs
src/core/: components.rs  constants.rs  enums.rs  events.rs  filters.rs  mod.rs  models.rs  resources.rs  states.rs  system_set.rs  utils.rs
src/devices/: mod.rs
src/devices/stove/: bundle.rs  mod.rs  plugin.rs
src/devices/stove/stove_slot/: bundle.rs  mod.rs  plugin.rs
src/plugins/: actor_plugin.rs  camera_plugin.rs  core_plugin.rs  crafting_plugin.rs  debug.rs  device_plugin.rs  inventory_plugin.rs  mod.rs  recipe_plugin.rs  scene_manager_plugin.rs  ui_elements_plugin.rs  ui_manager_plugin.rs
src/scenes/: mod.rs
src/scenes/test/: mod.rs  plugin.rs
src/ui/: mod.rs
src/ui/elements/: mod.rs
src/ui/elements/inventory_item_window/: bundle.rs  mod.rs  plugin.rs
src/ui/elements/inventory_window/: bundle.rs  mod.rs  plugin.rs  systems.rs
src/ui/elements/layout/: layout_wrapper.rs  list_layout.rs  mod.rs  sidebar_layout.rs
src/ui/elements/recipe_list/: bundle.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/ui/elements/recipe_window/: bundle.rs  mod.rs  (+1 more)
src/ui/states/: mod.rs
(+13 files in other folders)
