[package]
name = "bevy_tavern_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31.0"
bevy_mod_debugdump = "0.13.0"
env_logger = "0.11.8"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
once_cell = "1.17"

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[unstable]
codegen-backend = true

